--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "test": "node --experimental-vm-modules node_modules/.bin/jest",
+    "start": "node index.js"
+  },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "debug": "^4.4.1",
     "drizzle-orm": "^0.44.4",
@@ -18,8 +23,13 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
+    "babel-jest": "^30.0.5",
     "dotenv": "^17.2.1",
-    "sequelize-auto": "^0.8.8"
+    "jest": "^30.0.5",
+    "sequelize-auto": "^0.8.8",
+    "supertest": "^7.1.4"
   },
   "type": "module"
 }
